5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4355/executions/1670_2975.log
== TEST (2019-04-16 19:13:39) 
-- CODE:
round(2x)
round(2y)
round(10$)
round(2x+2y=13$)
'não'
-- ERROR:
File "XXXX", line 1
    round(2x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:13:43) 
-- CODE:
round(2x)
round(2y)
round(10$)
round(2x+2y=13$)
'não'
-- EXECUTION TIME:
0.28865
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(2x)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:09) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
round('não')
-- ERROR:
File "XXXX", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:16:11) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
round('não')
-- EXECUTION TIME:
0.133199
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:16) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
'não'
-- ERROR:
File "XXXX", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:16:18) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
'não'
-- EXECUTION TIME:
0.172816
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:31) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- ERROR:
File "XXXX", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:16:32) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- EXECUTION TIME:
0.171096
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:16:33) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- EXECUTION TIME:
0.203407
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:33) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- ERROR:
File "XXXX", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:16:33) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- EXECUTION TIME:
0.148165
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:16:34) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- EXECUTION TIME:
0.152024
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:34) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- ERROR:
File "XXXX", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:35) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- ERROR:
File "XXXX", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:16:35) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- EXECUTION TIME:
0.130366
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:35) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- ERROR:
File "XXXX", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:16:35) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- EXECUTION TIME:
0.119451
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:36) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- ERROR:
File "XXXX", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:36) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- ERROR:
File "XXXX", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:16:36) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- EXECUTION TIME:
0.119184
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:16:36) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- EXECUTION TIME:
0.149129
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(x=3,0$ y=3,5$)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:16:37) 
-- CODE:
round(x=3,0$ y=3,5$)
round(2x+2y=13$/10$)
('não')
-- EXECUTION TIME:
0.108903
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1670/2975/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:17:33) 
-- CODE:
6$
6$
10$
12$
nãó
-- ERROR:
File "XXXX", line 1
    6$
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:17:35) 
-- CODE:
6$
6$
10$
12$
nãó
-- EXECUTION TIME:
0.161523
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    6$
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:18:17) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round(não)
-- ERROR:
File "XXXX", line 1
    round(6$)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:18:18) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round(não)
-- ERROR:
File "XXXX", line 1
    round(6$)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:18) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round(não)
-- EXECUTION TIME:
0.165733
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(6$)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:18) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round(não)
-- EXECUTION TIME:
0.142815
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(6$)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:19) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round(não)
-- EXECUTION TIME:
0.165895
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(6$)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:19) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round(não)
-- EXECUTION TIME:
0.199127
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(6$)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:18:30) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round('nao')
-- ERROR:
File "XXXX", line 1
    round(6$)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:18:31) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round('nao')
-- ERROR:
File "XXXX", line 1
    round(6$)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:18:32) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round('nao')
-- ERROR:
File "XXXX", line 1
    round(6$)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:32) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round('nao')
-- EXECUTION TIME:
0.14462
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(6$)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:18:32) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round('nao')
-- ERROR:
File "XXXX", line 1
    round(6$)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:18:32) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round('nao')
-- ERROR:
File "XXXX", line 1
    round(6$)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:32) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round('nao')
-- EXECUTION TIME:
0.168631
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(6$)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:32) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round('nao')
-- EXECUTION TIME:
0.203763
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1670/2975/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:33) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round('nao')
-- EXECUTION TIME:
0.291889
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1670/2975/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:33) 
-- CODE:
round(6$)
round(6$)
round(10$)
round(12$)
round('nao')
-- EXECUTION TIME:
0.359099
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(6$)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:19:12) 
-- CODE:
round(2x=6$)
round(2y=6$)
round(10$)
round(2x+2y=12$)
round('nao')
-- ERROR:
File "XXXX", line 1
    round(2x=6$)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:19:14) 
-- CODE:
round(2x=6$)
round(2y=6$)
round(10$)
round(2x+2y=12$)
round('nao')
-- EXECUTION TIME:
0.218145
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(2x=6$)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:19:14) 
-- CODE:
round(2x=6$)
round(2y=6$)
round(10$)
round(2x+2y=12$)
round('nao')
-- ERROR:
File "XXXX", line 1
    round(2x=6$)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:19:15) 
-- CODE:
round(2x=6$)
round(2y=6$)
round(10$)
round(2x+2y=12$)
round('nao')
-- EXECUTION TIME:
0.132071
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(2x=6$)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:19:15) 
-- CODE:
round(2x=6$)
round(2y=6$)
round(10$)
round(2x+2y=12$)
round('nao')
-- EXECUTION TIME:
0.296484
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(2x=6$)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:19:15) 
-- CODE:
round(2x=6$)
round(2y=6$)
round(10$)
round(2x+2y=12$)
round('nao')
-- EXECUTION TIME:
0.226511
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 1
    round(2x=6$)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
